objects/Sales_Bonus__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Bonuses</relationshipLabel>
        <relationshipName>Sales_Bonuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Bonuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Bonus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Sales Bonus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Bonuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>